--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -24,6 +24,7 @@ jobs:
         WORKSPACE: ""
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SCAN_AUTO_BUILD: true
+        SCAN_DEBUG_MODE: debug
       with:
         output: reports
         # Scan auto-detects the languages in your project. To override uncomment the below variable and set the type
